# sim-uni

./: README.md  hello.py  nullcline.ipynb  phase_field.ipynb  pyproject.toml  report1.ipynb  setup.py  souzu.ipynb  tau_delta_plot.ipynb  test.ipynb  trajectory_of_each_pattern.ipynb  week1-1.ipynb  week1-2.ipynb  week1-4.ipynb  work1-3.ipynb
src/frinfo_library/: __init__.py
