[project]
name = "2024-aw-simulation-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
]
